[tool.poetry]
name = "prompt-generator-activity"
version = "0.1.0"
description = "A Streamlit app for generating prompts for written essay content."
authors = ["Gautam"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10.0"
streamlit = ">=1.45.1,<2.0.0"
pandas = ">=2.2.3,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
